# wmitool

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
docs/superpowers/specs/: 2026-05-25-wmitool-design.md  2026-05-26-pty-shell-design.md
wmitool/: __main__.py  cli.py  pty_shell.py  session.py  sftp.py  shell.py  terminal.py  winrm_pty.py
