[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wmitool"
version = "0.1.0"
description = "通过 WMI/DCOM 或 WinRM 连接远程 Windows 机器的 CLI 工具"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "impacket>=0.12.0",
    "pywinrm>=0.4.3",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
wmitool = "wmitool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wmitool*"]
